add settings for mobile view

--- a/index.html
+++ b/index.html
@@ -14,17 +14,42 @@
     <div class="banner">
       <header>
         <div class="wrapper">
-          <div class="logo">
-            <a href="#">UIBrush<span>.</span></a>
-          </div>
-          <ul class="top-navigation">
-            <li class="top-navigation__list"><a href="#" class="top-navigation__list__link">home</a></li>
-            <li class="top-navigation__list"><a href="#" class="top-navigation__list__link">ABOUT US</a></li>
-            <li class="top-navigation__list"><a href="#" class="top-navigation__list__link">PORTFOLIO</a></li>
-            <li class="top-navigation__list"><a href="#" class="top-navigation__list__link">SERVICES</a></li>
-            <li class="top-navigation__list"><a href="#" class="top-navigation__list__link">CONTACT US</a></li>
-          </ul>
-          <div class="clr"></div>
+          <nav>
+            <div class="mobile-nav">
+              <span class="glyphicon glyphicon-menu-hamburger" aria-hidden="true"></span>
+            </div>
+            <div class="logo">
+              <a href="#">UIBrush<span>.</span></a>
+            </div>
+            <ul class="top-navigation">
+              <li class="top-navigation__list">
+                <a href="#" class="top-navigation__list__link">
+                  home
+                </a>
+              </li>
+              <li class="top-navigation__list">
+                <a href="#" class="top-navigation__list__link">
+                  ABOUT US
+                </a>
+              </li>
+              <li class="top-navigation__list">
+                <a href="#" class="top-navigation__list__link">
+                  PORTFOLIO
+                </a>
+              </li>
+              <li class="top-navigation__list">
+                <a href="#" class="top-navigation__list__link">
+                  SERVICES
+                </a>
+              </li>
+              <li class="top-navigation__list">
+                <a href="#" class="top-navigation__list__link">
+                  CONTACT US
+                </a>
+              </li>
+            </ul>
+            <div class="clr"></div>
+          </nav>  
           <div class="header-content">
               <h1>
                 THE ULTIMATE COLLECTION OF <br>
@@ -264,7 +289,7 @@
           <div class="wrapper">
             <div class="article-header">
               <div class="article-header__title">
-                  Services
+                  contact-us
               </div>
               <div class="article-header__content">
                   Lorem ipsum dolor sit amet tetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna.
