--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
                   </div>
                 </div>
                 <div class="col-md-6 contact-us__form-block">
-                  <form name="contact-form" action="" id="contact-us__form">
+                  <form name="contact-form" action="get" id="contact-us__form">
                     <input type="text" name="name" placeholder="Name..." class="contact-us__form-block__name">
                     <input type="email" name="mail" placeholder="Email..." class="contact-us__form-block__email">
                     <input type="text" name="subject" placeholder="Subject..." class="contact-us__form-block__subject">
@@ -324,7 +324,6 @@
               </div>
             </div>
           </div>
-        </div>
       </main>
       <footer>
         <p>
