--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
               </li>
             </ul>
             <div class="clr"></div>
-          </nav>  
+          </nav>
           <div class="header-content">
               <h1>
                 THE ULTIMATE COLLECTION OF <br>
@@ -312,7 +312,7 @@
                   </div>
                 </div>
                 <div class="col-md-6 contact-us__form-block">
-                  <form name="contact-form" action="get" id="contact-us__form">
+                  <form name="contact-form" action="php/action.php" method="post" id="contact-us__form">
                     <input type="text" name="name" placeholder="Name..." class="contact-us__form-block__name">
                     <input type="email" name="mail" placeholder="Email..." class="contact-us__form-block__email">
                     <input type="text" name="subject" placeholder="Subject..." class="contact-us__form-block__subject">
